# liberado-qdrant-mcp

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  example.toml
.github/workflows/: ci.yml
.kilo/plans/: 1784416143069-magic-values-audit-fix.md
crates/lqm-api/: ARCHITECTURE.md  Cargo.toml
crates/lqm-api/src/: main.rs
crates/lqm-api/static/: index.html
crates/lqm-cli/: ARCHITECTURE.md  Cargo.toml
crates/lqm-cli/src/: main.rs
crates/lqm-core/: ARCHITECTURE.md  Cargo.toml
crates/lqm-core/src/: api_error.rs  chunking.rs  config.rs  constants.rs  context.rs  embedding.rs  error.rs  hybrid.rs  lib.rs  lifecycle.rs  memory.rs  qdrant.rs  reconstruction.rs  response_keys.rs  scope.rs  source_type.rs  types.rs
crates/lqm-ingest/: ARCHITECTURE.md  Cargo.toml
crates/lqm-ingest/src/: asr.rs  lib.rs  url.rs
crates/lqm-mcp/: ARCHITECTURE.md  Cargo.toml
crates/lqm-mcp/src/: main.rs
docs/: AGENTS.md  ARCHITECTURE.md  AUDIT.md  DECISIONS.md  PLAN.md  ROADMAP.md
docs/plans/: 2026-07-18-audio-transcription-deepinfra.md  2026-07-20-coverage-gaps.md  2026-07-20-dev-analysis.md  2026-07-20-next-steps-analysis.md
