[package]
name = "lqm-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lqm-api"
path = "src/main.rs"

[dependencies]
lqm-core = { path = "../lqm-core", features = ["embed-fastembed"] }
lqm-ingest = { path = "../lqm-ingest", features = ["pdf", "asr-deepinfra"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tower = "0.5"
walkdir = { workspace = true }
log = "0.4"
env_logger = "0.11"
