[package]
name = "lqm-ingest"
version.workspace = true
edition.workspace = true

[features]
default = ["fetch-url"]
# HTTP client for ingest_url / fetch_url (native TLS). Off for file-only consumers.
fetch-url = ["dep:reqwest"]
pdf = ["dep:pdf-extract"]

[dependencies]
lqm-core = { path = "../lqm-core" }
thiserror = "2"
serde_json = "1"
pdf-extract = { version = "0.12", optional = true }
# HTTP client for ingest_url / fetch_url (native TLS via reqwest defaults).
reqwest = { version = "0.12", default-features = true, optional = true }
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
