[package]
name = "lqm-ingest"
version.workspace = true
edition.workspace = true

[features]
# asr-deepinfra default-on so workspace unit tests exercise STT config/parse/fail-closed;
# disable with --no-default-features --features fetch-url for minimal file-only builds.
default = ["fetch-url", "asr-deepinfra"]
# HTTP client for ingest_url / fetch_url (native TLS). Off for file-only consumers.
fetch-url = ["dep:reqwest"]
pdf = ["dep:pdf-extract"]
# DeepInfra file ASR (Whisper + Nemotron). Enables multipart uploads.
asr-deepinfra = ["dep:reqwest", "reqwest/multipart"]

[dependencies]
lqm-core = { path = "../lqm-core" }
thiserror = "2"
serde_json = "1"
log = "0.4"
pdf-extract = { version = "0.12", optional = true }
# HTTP client for ingest_url / ASR (native TLS via reqwest defaults).
reqwest = { version = "0.12", default-features = true, optional = true }
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
