[package]
name = "lqm-mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lqm-mcp"
path = "src/main.rs"

[dependencies]
lqm-core = { path = "../lqm-core" }
lqm-ingest = { path = "../lqm-ingest" }
walkdir = "2"
turbomcp = { version = "3", features = ["stdio", "http", "channel"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
